--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^5.8.1",
     "@react-navigation/native": "^5.5.0",
     "@react-navigation/stack": "^5.4.1",
+    "date-fns": "^2.14.0",
     "firebase": "^7.14.6",
     "react": "16.11.0",
     "react-native": "0.62.2",
